fix about.css overflow-x:auto

--- a/www/about/about.css
+++ b/www/about/about.css
@@ -133,6 +133,6 @@ section.bio{
         background-color: rgba(0,0,0,0.6);
     }
     pre{
-        overflow-x: scroll;
+        overflow-x: auto;
     }
 }
